# Find_WBC_Project

./: Benchmark_inference.ipynb  Benchmark_inference_A100.ipynb  Benchmark_inference_DGX-SPARK.ipynb  Benchmark_inference_H100-PCIe-try1.ipynb  Benchmark_inference_H100-PCIe-try2.ipynb  Benchmark_inference_RTX-5090.ipynb  Benchmark_inference_RTX-PRO-6000-WKS.ipynb  CMakeLists.txt  README.md  main.cpp  requirements.txt  tensorRT.md  tensorRT_Benchmark.py
docs/: benchmark.xlsx
